tests/invalid/if_condition_function_value_two_params/main.py
def helper(x: int, y: int) -> int:
    return x + y


def run_case() -> None:
    if helper:
        print("bad")


if __name__ == "__main__":
    run_case()
